gccida/c2/extract_split_bit_field
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2249:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2253:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2254:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2261:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2263:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2268:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2270:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2327:31: error: invalid suffix 'orce' on integer constant
v16 = operand_sub*(short *)0xforce( op0, v11, v15); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2327:7: error: use of undeclared identifier 'operand_sub'
v16 = operand_sub*(short *)0xforce( op0, v11, v15); 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2330:55: error: invalid suffix 'xmode' on integer constant
fixed_bit_field = extract_fixed_bit_field( *(short *)0xmode, v16, ( v7 * v11) >> 3, v14, v10, 0LL, 1); 
                                                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2334:23: error: invalid suffix 'xmode' on integer constant
|| ( v19 = *(short *)0xmode, 
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2357:32: error: invalid suffix 'xmode' on integer constant
v23 = expand_binop( *(short *)0xmode, optab_table[19], v23, op1, 0LL, 1, OPTAB_LIB_WIDEN); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2375:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v25 = ( __int64)op0[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2396:18: error: invalid suffix 'xmode' on integer constant
v27 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2408:63: error: use of undeclared identifier 'optab_methods'
v33 = expand_binop( v27, optab_table[21], v24, v31, 0LL, 0, ( optab_methods)methods); 
                                                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2418:18: error: invalid suffix 'xmode' on integer constant
v34 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/expmed.c:2430:63: error: use of undeclared identifier 'optab_methods'
v40 = expand_binop( v34, optab_table[23], v24, v38, 0LL, 0, ( optab_methods)v39); 
                                                              ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extract_split_bit_field/src/obj/expmed.o] Error 1
